ECO-06: The SAIL Transformation - Modern Pro Overhaul 🏔️⛵ (Bilingual + Blog + Light UI)

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,6 @@
   "public": true,
   "cleanUrls": true,
   "rewrites": [
-    { "source": "/(.*)", "destination": "/pro-viewer.html" }
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
